2024-10-21  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add argument
        'time.labels.cex', with default 1; it passed to
        'axis' as argument 'cex.axis'
        (plotseries): when timestamps are of class 'POSIXt',
        then 'axis.POSIXct' is called

2024-05-28  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): rename
        "warn.fan1" to "warn1"

2024-05-25  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.3.0

2024-05-22  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add argument 'lty'

2024-05-06  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add argument
        "warn.fan1"; if TRUE, warn when a fanplot is to be
        computed from a single series (the warning had always
        been issued, and the new argument provides a way to
        suppress it)

2024-02-23  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (.quantile, .fan): add labels to
        all chosen "probs", not just the median

2023-10-20  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add argument
        'reset.par', with default TRUE

2023-10-16  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (.quantile, .fan): computation of
        quantiles is now more efficient

        * R/plotseries.R (.fan): median.col is no longer
        ignored

2023-10-13  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): return a list, with
        currently only a single member ("time.grid.at")

2023-09-28  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.2.0 (use dots only as
        separators, i.e.  no hyphen)
        (Suggests): add BISdata

2022-12-09  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.zoo): add argument